--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "node": "22.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.7.3",
     "turbo": "^1.13.3"
-  }
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
