--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "services/*"
   ],
   "volta": {
-    "node": "22.2.0"
+    "node": "20.14.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
     "turbo": "^1.13.3"
   },
   "trustedDependencies": [
-    "@biomejs/biome"
+    "@biomejs/biome",
+    "@swc/core",
+    "esbuild"
   ]
 }
