--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.22",
     "@langchain/openai": "^0.1.2",
+    "@statelyai/agent": "^0.1.4",
     "ai": "^3.1.28",
     "react": "19.0.0-rc.0",
     "react-dom": "19.0.0-rc.0",
     "react-server-dom-webpack": "19.0.0-rc.0",
+    "ts-pattern": "^5.2.0",
     "waku": "0.21.0-alpha.2",
+    "xstate": "^5.14.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
