--- a/packages/keyboard/package.json
+++ b/packages/keyboard/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "@umut/layout-tree",
+  "name": "@umut/keyboard",
   "module": "index.ts",
+  "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "immer": "^10.1.1",
-    "ts-pattern": "^5.3.1"
   }
 }
