--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -1,32 +1,48 @@
 {
-  "name": "@umut/usir-in",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "waku dev",
-    "build": "waku build",
-    "start": "waku start"
-  },
-  "dependencies": {
-    "@ai-sdk/openai": "^0.0.22",
-    "@langchain/openai": "^0.1.2",
-    "ai": "^3.1.28",
-    "react": "19.0.0-rc.0",
-    "react-dom": "19.0.0-rc.0",
-    "react-server-dom-webpack": "19.0.0-rc.0",
-    "waku": "0.21.0-alpha.2",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "typescript": "5.4.5"
-  },
-  "overrides": {
-    "react": "19.0.0-rc.0",
-    "react-dom": "19.0.0-rc.0",
-    "react-server-dom-webpack": "19.0.0-rc.0"
-  }
+	"name": "@umut/usir-in",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "waku dev",
+		"build": "waku build",
+		"start": "waku start",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate"
+	},
+	"dependencies": {
+		"@ai-sdk/openai": "^0.0.66",
+		"@codesandbox/sandpack-react": "^2.19.9",
+		"@dnd-kit/core": "^6.1.0",
+		"@dnd-kit/utilities": "^3.2.2",
+		"@electric-sql/pglite": "^0.2.10",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/themes": "^3.1.3",
+		"@rwh/keystrokes": "^1.5.6",
+		"@rwh/react-keystrokes": "^1.5.6",
+		"@umut/layout-tree": "workspace:*",
+		"ai": "^3.4.9",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
+		"drizzle-orm": "^0.33.0",
+		"immer": "^10.1.1",
+		"react": "19.0.0-rc-d6cb4e77-20240911",
+		"react-dom": "19.0.0-rc-d6cb4e77-20240911",
+		"react-resizable-panels": "^2.1.3",
+		"react-reverse-portal": "^2.1.2",
+		"react-server-dom-webpack": "19.0.0-rc-d6cb4e77-20240911",
+		"ts-pattern": "^5.2.0",
+		"use-broadcast-ts": "^1.7.0",
+		"waku": "0.21.2",
+		"xstate": "^5.14.0",
+		"zod": "^3.23.8",
+		"zustand": "^5.0.0-rc.2"
+	},
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/react": "18.3.5",
+		"@types/react-dom": "18.3.0",
+		"drizzle-kit": "^0.24.2",
+		"typescript": "5.6.2"
+	}
 }
