--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -26,14 +26,15 @@
 		"cmdk": "^1.0.0",
 		"drizzle-orm": "^0.33.0",
 		"immer": "^10.1.1",
-		"react": "19.0.0-rc-d6cb4e77-20240911",
-		"react-dom": "19.0.0-rc-d6cb4e77-20240911",
+		"react": "19.0.0-rc-2d16326d-20240930",
+		"react-dom": "19.0.0-rc-2d16326d-20240930",
+		"react-error-boundary": "^4.0.13",
 		"react-resizable-panels": "^2.1.3",
 		"react-reverse-portal": "^2.1.2",
-		"react-server-dom-webpack": "19.0.0-rc-d6cb4e77-20240911",
+		"react-server-dom-webpack": "19.0.0-rc-2d16326d-20240930",
 		"ts-pattern": "^5.2.0",
 		"use-broadcast-ts": "^1.7.0",
-		"waku": "0.21.2",
+		"waku": "^0.21.3",
 		"xstate": "^5.14.0",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.0-rc.2"
@@ -43,6 +44,7 @@
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
 		"drizzle-kit": "^0.24.2",
-		"typescript": "5.6.2"
+		"typescript": "5.6.2",
+		"vite": "^5.4.8"
 	}
 }
