--- a/packages/layout-tree/package.json
+++ b/packages/layout-tree/package.json
@@ -2,7 +2,9 @@
   "name": "@umut/layout-tree",
   "module": "index.ts",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/lodash.get": "^4.4.9",
+    "@types/lodash.set": "^4.3.9"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -10,6 +12,8 @@
   "type": "module",
   "dependencies": {
     "immer": "^10.1.1",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "ts-pattern": "^5.3.1"
   }
 }
