--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "waku dev",
-		"build": "waku build",
-		"start": "waku start",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate"
 	},
@@ -21,23 +21,27 @@
 		"@rwh/keystrokes": "^1.5.6",
 		"@rwh/react-keystrokes": "^1.5.6",
 		"@umut/layout-tree": "workspace:*",
+		"@xstate/react": "^4.1.3",
 		"ai": "^3.4.9",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"drizzle-orm": "^0.33.0",
 		"immer": "^10.1.1",
-		"react": "19.0.0-rc-2d16326d-20240930",
-		"react-dom": "19.0.0-rc-2d16326d-20240930",
+		"next": "^15.0.0-rc.0",
+		"react": "^19.0.0-rc-d5bba18b-20241009",
+		"react-dom": "^19.0.0-rc-d5bba18b-20241009",
 		"react-error-boundary": "^4.0.13",
 		"react-resizable-panels": "^2.1.3",
 		"react-reverse-portal": "^2.1.2",
-		"react-server-dom-webpack": "19.0.0-rc-2d16326d-20240930",
+		"react-server-dom-webpack": "^19.0.0-rc-d5bba18b-20241009",
+		"tinybase": "^5.3.2",
 		"ts-pattern": "^5.2.0",
 		"use-broadcast-ts": "^1.7.0",
 		"waku": "^0.21.3",
 		"xstate": "^5.14.0",
 		"zod": "^3.23.8",
-		"zustand": "^5.0.0-rc.2"
+		"zustand": "^5.0.0-rc.2",
+		"zustand-middleware-xstate": "^3.0.1"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
