--- a/services/usir-in/tsconfig.json
+++ b/services/usir-in/tsconfig.json
@@ -5,25 +5,31 @@
 		"target": "ESNext",
 		"module": "ESNext",
 		"moduleDetection": "force",
-		"jsx": "react-jsx",
+		"jsx": "preserve",
 		"allowJs": true,
-
 		// Bundler mode
 		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": true,
 		"verbatimModuleSyntax": true,
 		"noEmit": true,
-
 		// Best practices
 		"strict": true,
 		"skipLibCheck": true,
 		"noFallthroughCasesInSwitch": true,
-
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"noPropertyAccessFromIndexSignature": false,
-
-		"types": ["react/experimental"]
-	}
+		"types": ["react/experimental"],
+		"incremental": true,
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"plugins": [{ "name": "next" }],
+		"paths": {
+			"~/*": ["./*"]
+		},
+		"baseUrl": "."
+	},
+	"include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+	"exclude": ["node_modules"]
 }
