--- a/packages/layout-tree/package.json
+++ b/packages/layout-tree/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/lodash.get": "^4.4.9",
+    "@types/lodash.nth": "^4.11.6",
     "@types/lodash.set": "^4.3.9"
   },
   "peerDependencies": {
@@ -13,6 +14,7 @@
   "dependencies": {
     "immer": "^10.1.1",
     "lodash.get": "^4.4.2",
+    "lodash.nth": "^4.11.2",
     "lodash.set": "^4.3.2",
     "ts-pattern": "^5.3.1"
   }
