--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -21,7 +21,9 @@
 		"@rwh/keystrokes": "^1.5.6",
 		"@rwh/react-keystrokes": "^1.5.6",
 		"@umut/layout-tree": "workspace:*",
+		"@xstate/immer": "^0.3.3",
 		"@xstate/react": "^4.1.3",
+		"@xstate/store": "^2.6.0",
 		"ai": "^3.4.9",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
