--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -21,6 +21,7 @@
 		"@rwh/keystrokes": "^1.5.6",
 		"@rwh/react-keystrokes": "^1.5.6",
 		"@umut/layout-tree": "workspace:*",
+		"@umut/runekeeper": "workspace:*",
 		"@xstate/immer": "^0.3.3",
 		"@xstate/react": "^4.1.3",
 		"@xstate/store": "^2.6.0",
