--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -30,10 +30,12 @@
 		"cmdk": "^1.0.0",
 		"drizzle-orm": "^0.33.0",
 		"immer": "^10.1.1",
+		"lodash.omit": "^4.5.0",
 		"next": "^15.0.0-rc.0",
 		"react": "^19.0.0-rc-d5bba18b-20241009",
 		"react-dom": "^19.0.0-rc-d5bba18b-20241009",
 		"react-error-boundary": "^4.0.13",
+		"react-focus-rings": "^1.1.0",
 		"react-resizable-panels": "^2.1.3",
 		"react-reverse-portal": "^2.1.2",
 		"react-server-dom-webpack": "^19.0.0-rc-d5bba18b-20241009",
@@ -48,6 +50,7 @@
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
+		"@types/lodash.omit": "^4.5.9",
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
 		"drizzle-kit": "^0.24.2",
