--- a/packages/codex/tsconfig.json
+++ b/packages/codex/tsconfig.json
@@ -15,6 +15,14 @@
     "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true
-  }
+    "noFallthroughCasesInSwitch": true,
+  },
+  "include": [
+    "index.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test"
+  ]
 }
