--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/themes": "^3.1.3",
 		"@rwh/keystrokes": "^1.5.6",
 		"@rwh/react-keystrokes": "^1.5.6",
+		"@umut/codex": "workspace:*",
 		"@umut/layout-tree": "workspace:*",
 		"@umut/runekeeper": "workspace:*",
 		"@xstate/immer": "^0.3.3",
