--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "spellbook",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+	"name": "@umut/spellbook",
+	"version": "0.0.1",
+	"module": "./index.ts",
+	"type": "module",
+	"dependencies": {
+		"dot-prop": "^9.0.0"
+	},
+	"devDependencies": {
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0",
+		"zod": "^3.22.4"
+	}
 }
