--- a/packages/runekeeper/package.json
+++ b/packages/runekeeper/package.json
@@ -3,7 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "jsdom": "latest",
+    "@types/jsdom": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
