--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -15,6 +15,7 @@
 		"@codesandbox/sandpack-react": "^2.19.9",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/utilities": "^3.2.2",
+		"@effect/schema": "^0.75.5",
 		"@electric-sql/pglite": "^0.2.10",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/themes": "^3.1.3",
@@ -31,6 +32,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"drizzle-orm": "^0.33.0",
+		"effect": "^3.10.15",
 		"immer": "^10.1.1",
 		"lodash.omit": "^4.5.0",
 		"next": "^15.0.0-rc.0",
