--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -15,6 +15,8 @@
 		"@codesandbox/sandpack-react": "^2.19.9",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/utilities": "^3.2.2",
+		"@effect/platform": "^0.69.24",
+		"@effect/rpc": "^0.44.24",
 		"@effect/schema": "^0.75.5",
 		"@electric-sql/pglite": "^0.2.10",
 		"@radix-ui/react-icons": "^1.3.0",
