--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -24,8 +24,10 @@
 		"@rwh/keystrokes": "^1.5.6",
 		"@rwh/react-keystrokes": "^1.5.6",
 		"@umut/codex": "workspace:*",
+		"@umut/forge": "workspace:*",
 		"@umut/layout-tree": "workspace:*",
 		"@umut/runekeeper": "workspace:*",
+		"@umut/studio": "workspace:*",
 		"@xstate/immer": "^0.3.3",
 		"@xstate/react": "^4.1.3",
 		"@xstate/store": "^2.6.0",
@@ -44,6 +46,7 @@
 		"react-focus-rings": "^1.1.0",
 		"react-resizable-panels": "^2.1.3",
 		"react-reverse-portal": "^2.1.2",
+		"react-router": "^7.1.5",
 		"react-server-dom-webpack": "^19.0.0-rc-d5bba18b-20241009",
 		"tinybase": "^5.3.2",
 		"ts-pattern": "^5.2.0",
