--- a/packages/layout-tree/package.json
+++ b/packages/layout-tree/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "@umut/layout-tree",
-  "module": "index.ts",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/lodash.get": "^4.4.9",
-    "@types/lodash.nth": "^4.11.6",
-    "@types/lodash.set": "^4.3.9"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@umut/forge": "workspace:*",
-    "immer": "^10.1.1",
-    "lodash.get": "^4.4.2",
-    "lodash.nth": "^4.11.2",
-    "lodash.set": "^4.3.2",
-    "ts-pattern": "^5.3.1"
-  }
+	"name": "@umut/layout-tree",
+	"version": "0.0.0",
+	"type": "module",
+	"module": "index.ts",
+	"dependencies": {
+		"@umut/forge": "workspace:*",
+		"immer": "^10.1.1",
+		"lodash.get": "^4.4.2"
+	},
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/lodash.get": "^4.4.9"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	}
 }
