--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -4,13 +4,12 @@
 	"module": "./index.ts",
 	"type": "module",
 	"dependencies": {
-		"dot-prop": "^9.0.0"
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
 	},
 	"peerDependencies": {
-		"typescript": "^5.0.0",
-		"zod": "^3.22.4"
+		"typescript": "^5.0.0"
 	}
 }
