--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -6,37 +6,24 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate"
+		"start": "next start"
 	},
 	"dependencies": {
 		"@ai-sdk/openai": "^0.0.66",
 		"@codesandbox/sandpack-react": "^2.19.9",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/utilities": "^3.2.2",
-		"@effect/platform": "^0.69.24",
-		"@effect/rpc": "^0.44.24",
-		"@effect/schema": "^0.75.5",
-		"@electric-sql/pglite": "^0.2.10",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/themes": "^3.1.3",
-		"@rwh/keystrokes": "^1.5.6",
-		"@rwh/react-keystrokes": "^1.5.6",
-		"@umut/codex": "workspace:*",
 		"@umut/forge": "workspace:*",
 		"@umut/layout-tree": "workspace:*",
 		"@umut/runekeeper": "workspace:*",
 		"@umut/studio": "workspace:*",
-		"@xstate/immer": "^0.3.3",
 		"@xstate/react": "^4.1.3",
-		"@xstate/store": "^2.6.0",
 		"@xyflow/react": "^12.3.2",
 		"ai": "^3.4.9",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
-		"drizzle-orm": "^0.33.0",
-		"effect": "^3.10.15",
 		"immer": "^10.1.1",
 		"lodash.omit": "^4.5.0",
 		"next": "^15.0.0-rc.0",
@@ -48,10 +35,7 @@
 		"react-reverse-portal": "^2.1.2",
 		"react-router": "^7.1.5",
 		"react-server-dom-webpack": "^19.0.0-rc-d5bba18b-20241009",
-		"tinybase": "^5.3.2",
 		"ts-pattern": "^5.2.0",
-		"use-broadcast-ts": "^1.7.0",
-		"waku": "^0.21.3",
 		"xstate": "^5.14.0",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.0-rc.2",
@@ -62,8 +46,6 @@
 		"@types/lodash.omit": "^4.5.9",
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
-		"drizzle-kit": "^0.24.2",
-		"typescript": "5.6.2",
-		"vite": "^5.4.8"
+		"typescript": "5.6.2"
 	}
 }
