Update package dependencies and use pnpm catalog for version management
- Migrate package dependencies to use pnpm catalog versioning
- Update package.json files to reference catalog versions for consistent dependency management
- Upgrade various dependencies to latest versions, including TypeScript, React, XState, and Zod
- Modify pnpm-lock.yaml to reflect new dependency versions and catalog configuration

--- a/packages/runekeeper/package.json
+++ b/packages/runekeeper/package.json
@@ -3,7 +3,7 @@
 	"module": "index.ts",
 	"type": "module",
 	"dependencies": {
-		"xstate": "^5.18.2"
+		"xstate": "catalog:"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
@@ -11,6 +11,6 @@
 		"@types/jsdom": "latest"
 	},
 	"peerDependencies": {
-		"typescript": "^5.0.0"
+		"typescript": "catalog:"
 	}
 }
