--- a/packages/layout-tree/package.json
+++ b/packages/layout-tree/package.json
@@ -5,7 +5,7 @@
 	"module": "index.ts",
 	"dependencies": {
 		"@umut/forge": "workspace:*",
-		"immer": "^10.1.1",
+		"immer": "catalog:",
 		"lodash.get": "^4.4.2"
 	},
 	"devDependencies": {
@@ -13,6 +13,6 @@
 		"@types/lodash.get": "^4.4.9"
 	},
 	"peerDependencies": {
-		"typescript": "^5.0.0"
+		"typescript": "catalog:"
 	}
 }
