--- a/packages/otp/package.json
+++ b/packages/otp/package.json
@@ -6,7 +6,7 @@
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "catalog:"
   },
   "dependencies": {
     "base-x": "^4.0.0",
