--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,22 @@
 packages:
   - "packages/*"
   - "services/*"
+
+catalog:
+  "@radix-ui/react-icons": 1.3.2
+  "@radix-ui/themes": 3.2.0
+  "@xstate/react": 5.0.2
+  "@types/react": 19.0.8
+  "@types/react-dom": 19.0.3
+  "immer": 10.1.1
+  "lucide-react": 0.475.0
+  "next": 15.1.6
+  "react": 19.0.0
+  "react-dom": 19.0.0
+  "react-router": 7.1.5
+  "react-server-dom-webpack": 19.0.0
+  "xstate": 5.19.2
+  "ts-pattern": 5.6.2
+  "typescript": 5.7.3
+  "zod": 3.23.8
+  "zustand": 5.0.3
