--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -13,32 +13,32 @@
 		"@codesandbox/sandpack-react": "^2.19.9",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/utilities": "^3.2.2",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/themes": "^3.1.3",
+		"@radix-ui/react-icons": "catalog:",
+		"@radix-ui/themes": "catalog:",
 		"@umut/forge": "workspace:*",
 		"@umut/layout-tree": "workspace:*",
 		"@umut/runekeeper": "workspace:*",
 		"@umut/studio": "workspace:*",
-		"@xstate/react": "^4.1.3",
+		"@xstate/react": "catalog:",
 		"@xyflow/react": "^12.3.2",
 		"ai": "^3.4.9",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
-		"immer": "^10.1.1",
+		"immer": "catalog:",
 		"lodash.omit": "^4.5.0",
-		"next": "^15.0.0-rc.0",
-		"react": "^19.0.0-rc-d5bba18b-20241009",
-		"react-dom": "^19.0.0-rc-d5bba18b-20241009",
+		"next": "catalog:",
+		"react": "catalog:",
+		"react-dom": "catalog:",
 		"react-error-boundary": "^4.0.13",
 		"react-focus-rings": "^1.1.0",
 		"react-resizable-panels": "^2.1.3",
 		"react-reverse-portal": "^2.1.2",
-		"react-router": "^7.1.5",
-		"react-server-dom-webpack": "^19.0.0-rc-d5bba18b-20241009",
-		"ts-pattern": "^5.2.0",
-		"xstate": "^5.14.0",
-		"zod": "^3.23.8",
-		"zustand": "^5.0.0-rc.2",
+		"react-router": "catalog:",
+		"react-server-dom-webpack": "catalog:",
+		"ts-pattern": "catalog:",
+		"xstate": "catalog:",
+		"zod": "catalog:",
+		"zustand": "catalog:",
 		"zustand-middleware-xstate": "^3.0.1"
 	},
 	"devDependencies": {
@@ -46,6 +46,6 @@
 		"@types/lodash.omit": "^4.5.9",
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
-		"typescript": "5.6.2"
+		"typescript": "catalog:"
 	}
 }
