--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@umut/usir-in",
+	"name": "@usirin/usir-in",
 	"version": "0.1.0",
 	"private": true,
 	"type": "module",
@@ -15,10 +15,11 @@
 		"@dnd-kit/utilities": "^3.2.2",
 		"@radix-ui/react-icons": "catalog:",
 		"@radix-ui/themes": "catalog:",
-		"@umut/forge": "workspace:*",
-		"@umut/layout-tree": "workspace:*",
-		"@umut/runekeeper": "workspace:*",
-		"@umut/studio": "workspace:*",
+		"@usirin/forge": "workspace:*",
+		"@usirin/layout-tree": "workspace:*",
+		"@usirin/runekeeper": "workspace:*",
+		"@usirin/spellbook": "workspace:*",
+		"@usirin/studio": "workspace:*",
 		"@xstate/react": "catalog:",
 		"@xyflow/react": "^12.3.2",
 		"ai": "^3.4.9",
