Refactor @usirin/forge package with improved entity management and build configuration
- Add base-x for unique ID generation
- Update package configuration for ESM and TypeScript
- Enhance entity factory with type-safe references
- Improve README with clearer examples and documentation
- Add rslib build configuration
- Remove legacy test and index files
- Implement base58 ID generation with timestamp embedding

--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -1,10 +1,25 @@
 {
 	"name": "@usirin/forge",
 	"version": "0.0.0",
-	"main": "index.ts",
-	"types": "index.ts",
-	"dependencies": {},
+	"type": "module",
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/index.js"
+		}
+	},
+	"module": "./dist/index.js",
+	"types": "./dist/src/index.d.ts",
+	"files": ["dist"],
+	"scripts": {
+		"build": "rslib build",
+		"dev": "rslib build --watch"
+	},
+	"dependencies": {
+		"base-x": "^4.0.0"
+	},
 	"devDependencies": {
-		"bun-types": "latest"
+		"@rslib/core": "catalog:",
+		"@types/bun": "latest"
 	}
 }
