--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 catalog:
   "@radix-ui/react-icons": 1.3.2
   "@radix-ui/themes": 3.2.0
+  "@rslib/core": 0.4.1
   "@xstate/react": 5.0.2
   "@types/react": 19.0.8
   "@types/react-dom": 19.0.3
@@ -20,3 +21,4 @@ catalog:
   "typescript": 5.7.3
   "zod": 3.23.8
   "zustand": 5.0.3
+
