--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,32 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "pipeline": {
+  "daemon": true,
+  "tasks": {
+    "setup": {
+      "dependsOn": ["build"],
+      "cache": false
+    },
+    "dev": {
+      "dependsOn": ["^build"],
+      "cache": false,
+      "persistent": true
+    },
+    "lint": {
+      "dependsOn": ["^build"],
+      "cache": true
+    },
+    "test": {
+      "dependsOn": ["^build"],
+      "cache": true
+    },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".build/**", "!.build/cache/**"]
+      "outputs": ["dist", "*.tsbuildinfo", ".next", "build"],
+      "cache": true
     },
-    "dev": {},
-    "test": {}
+    "start": {
+      "dependsOn": ["build"],
+      "cache": false
+    }
   }
 }
