Add Bun test setup and update GitHub Actions workflow
- Configure Bun test script in forge package
- Update build.yaml to include Bun setup step
- Rename build job to "test-and-build" for clarity

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
       - "*"
 
 jobs:
-  build-and-test:
+  test-and-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +24,10 @@ jobs:
         with:
           node-version: 22
           cache: pnpm
+
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
 
       - name: Install dependencies
         run: pnpm install
