--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -13,7 +13,8 @@
 	"files": ["dist"],
 	"scripts": {
 		"build": "rslib build",
-		"dev": "rslib build --watch"
+		"dev": "rslib build --watch",
+		"test": "bun test"
 	},
 	"dependencies": {
 		"base-x": "^4.0.0"
