Update GitHub Actions workflow to use non-frozen pnpm lockfile
- Modify build.yaml to use `pnpm install --no-frozen-lockfile`
- Ensure more flexible dependency installation during CI

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
           bun-version: latest
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run tests
         run: pnpm test
