Refactor usir-in service and update dependencies
- Remove SpellbookContext, KeystrokesManager, and vite.config.ts
- Simplify app/layout.tsx by removing embedded prop
- Add @radix-ui/react-use-callback-ref and immer dependencies
- Update generation-actions.ts to use process.env for OpenAI API key
- Add new /api/hello route with React Server Components experiment
- Minor adjustments to menubar styling

--- a/packages/runekeeper/package.json
+++ b/packages/runekeeper/package.json
@@ -3,7 +3,8 @@
 	"module": "index.ts",
 	"type": "module",
 	"dependencies": {
-		"xstate": "catalog:"
+		"xstate": "catalog:",
+		"immer": "catalog:"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
