--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -2,6 +2,7 @@
 	"name": "@usirin/forge",
 	"version": "0.0.0",
 	"type": "module",
+	"private": false,
 	"exports": {
 		".": {
 			"types": "./dist/src/index.d.ts",
