--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -3,7 +3,11 @@
 	"version": "0.0.1",
 	"module": "./index.ts",
 	"type": "module",
+	"scripts": {
+		"test": "bun test"
+	},
 	"dependencies": {
+		"@standard-schema/spec": "^1.0.0",
 		"zod": "catalog:"
 	},
 	"devDependencies": {
