Refactor Spellbook package with comprehensive implementation
- Complete implementation of Spellbook core modules
- Add transport mechanisms for WebSocket and EventEmitter
- Implement type-safe spell execution and validation
- Create comprehensive documentation for package usage
- Update package configuration for ESM and TypeScript
- Add test suites for core functionality
- Migrate existing studio manager to use new Spellbook implementation

--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@biomejs/biome",
+			"core-js",
 			"es5-ext",
-			"sharp"
+			"esbuild",
+			"sharp",
+			"workerd"
 		]
 	}
 }
