--- a/packages/spellbook/tsconfig.json
+++ b/packages/spellbook/tsconfig.json
@@ -28,5 +28,5 @@
 		"declarationMap": true
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "dist", "*.test.ts", "*.test.tsx"]
+	"exclude": ["node_modules", "dist"]
 }
