feat(forge): Add struct factory with schema validation support
- Integrate @standard-schema/spec for type-safe entity creation
- Implement `struct` function for creating validated entities
- Add synchronous and asynchronous validation utilities
- Update package dependencies to include zod and @standard-schema/spec
- Enhance forge package with improved schema validation capabilities

--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -18,10 +18,12 @@
 		"test": "bun test"
 	},
 	"dependencies": {
-		"base-x": "^4.0.0"
+		"base-x": "^4.0.0",
+		"@standard-schema/spec": "catalog:"
 	},
 	"devDependencies": {
 		"@rslib/core": "catalog:",
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"zod": "catalog:"
 	}
 }
