--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -54,7 +54,7 @@
 		"test": "bun test"
 	},
 	"dependencies": {
-		"@standard-schema/spec": "^1.0.0",
+		"@standard-schema/spec": "catalog:",
 		"@usirin/forge": "workspace:",
 		"ws": "catalog:",
 		"zod": "catalog:"
