--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ catalog:
   "@radix-ui/react-icons": 1.3.2
   "@radix-ui/themes": 3.2.0
   "@rslib/core": 0.4.1
+  "@standard-schema/spec": 1.0.0
   "@xstate/react": 5.0.2
   "@types/react": 19.0.8
   "@types/react-dom": 19.0.3
