--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@ai-sdk/openai": "^0.0.66",
+		"@ai-sdk/react": "^1.1.21",
 		"@codesandbox/sandpack-react": "^2.19.9",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/utilities": "^3.2.2",
