--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -21,6 +21,7 @@ catalog:
   "xstate": 5.19.2
   "ts-pattern": 5.6.2
   "typescript": 5.7.3
+  "valibot": 1.0.0-rc.0
   "ws": 8.18.1
   "zod": 3.24.2
   "zustand": 5.0.3
