--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -1,6 +1,7 @@
 {
+	"$schema": "https://json.schemastore.org/package",
 	"name": "@usirin/spellbook",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Type-safe API surfaces that work across process boundaries",
 	"type": "module",
 	"private": false,
@@ -21,6 +22,7 @@
 	},
 	"files": ["dist", "README.md", "LICENSE"],
 	"homepage": "https://github.com/usirin/monorepo/packages/spellbook",
+	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/usirin/monorepo"
@@ -33,13 +35,13 @@
 	},
 	"dependencies": {
 		"@standard-schema/spec": "catalog:",
-		"@usirin/forge": "workspace:",
-		"zod": "catalog:"
+		"@usirin/forge": "workspace:"
 	},
 	"devDependencies": {
 		"@rslib/core": "catalog:",
 		"@types/bun": "latest",
-		"valibot": "catalog:"
+		"valibot": "catalog:",
+		"zod": "catalog:"
 	},
 	"peerDependencies": {
 		"typescript": "catalog:"
