--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/package",
 	"name": "@usirin/spellbook",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"description": "Type-safe API surfaces that work across process boundaries",
 	"type": "module",
 	"private": false,
@@ -11,13 +11,13 @@
 	"exports": {
 		".": {
 			"types": "./dist/src/index.d.ts",
-			"default": "./dist/index.js",
-			"require": "./dist/index.cjs"
+			"require": "./dist/index.cjs",
+			"import": "./dist/index.js"
 		},
 		"./spellbook": {
 			"types": "./dist/src/spellbook.d.ts",
-			"default": "./dist/spellbook.js",
-			"require": "./dist/spellbook.cjs"
+			"require": "./dist/spellbook.cjs",
+			"import": "./dist/spellbook.js"
 		}
 	},
 	"files": ["dist", "README.md", "LICENSE"],
