--- a/packages/spellbook/package.json
+++ b/packages/spellbook/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/package",
 	"name": "@usirin/spellbook",
-	"version": "0.4.0",
+	"version": "0.5.0",
 	"description": "Type-safe API surfaces that work across process boundaries",
 	"type": "module",
 	"private": false,
@@ -18,6 +18,11 @@
 			"types": "./dist/src/spellbook.d.ts",
 			"require": "./dist/spellbook.cjs",
 			"import": "./dist/spellbook.js"
+		},
+		"./fn": {
+			"types": "./dist/src/fn.d.ts",
+			"require": "./dist/fn.cjs",
+			"import": "./dist/fn.js"
 		}
 	},
 	"files": ["dist", "README.md", "LICENSE"],
@@ -42,8 +47,5 @@
 		"@types/bun": "latest",
 		"valibot": "catalog:",
 		"zod": "catalog:"
-	},
-	"peerDependencies": {
-		"typescript": "catalog:"
 	}
 }
