--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "usirin stack",
 	"author": "Umut Sirin <mail@usir.in>",
 	"license": "MIT",
-	"packageManager": "pnpm@10.2.1",
+	"packageManager": "pnpm@10.12.4",
 	"scripts": {
 		"dev": "turbo dev",
 		"build": "turbo build",
@@ -18,7 +18,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.7.3",
-		"turbo": "^2.4.2"
+		"turbo": "catalog:"
 	},
 	"trustedDependencies": [
 		"@biomejs/biome",
