--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,27 +1,28 @@
 packages:
-  - "packages/*"
-  - "services/*"
+  - packages/*
+  - services/*
 
 catalog:
-  "@radix-ui/react-icons": 1.3.2
-  "@radix-ui/themes": 3.2.0
-  "@rslib/core": 0.4.1
-  "@standard-schema/spec": 1.0.0
-  "@xstate/react": 5.0.2
-  "@types/react": 19.0.8
-  "@types/react-dom": 19.0.3
-  "@types/ws": 8.5.14
-  "immer": 10.1.1
-  "lucide-react": 0.475.0
-  "next": 15.1.6
-  "react": 19.0.0
-  "react-dom": 19.0.0
-  "react-router": 7.1.5
-  "react-server-dom-webpack": 19.0.0
-  "xstate": 5.19.2
-  "ts-pattern": 5.6.2
-  "typescript": 5.7.3
-  "valibot": 1.0.0-rc.0
-  "ws": 8.18.1
-  "zod": 3.24.2
-  "zustand": 5.0.3
+  '@radix-ui/react-icons': 1.3.2
+  '@radix-ui/themes': 3.2.0
+  '@rslib/core': 0.4.1
+  '@standard-schema/spec': 1.0.0
+  '@xstate/react': 5.0.2
+  '@types/react': 19.0.8
+  '@types/react-dom': 19.0.3
+  '@types/ws': 8.5.14
+  immer: 10.1.1
+  lucide-react: 0.475.0
+  next: 15.1.6
+  react: 19.0.0
+  react-dom: 19.0.0
+  react-router: 7.1.5
+  react-server-dom-webpack: 19.0.0
+  xstate: 5.19.2
+  ts-pattern: 5.6.2
+  typescript: 5.7.3
+  valibot: 1.0.0-rc.0
+  ws: 8.18.1
+  zod: 3.24.2
+  zustand: 5.0.3
+  turbo: 2.5.4
