--- a/services/usir-in/package.json
+++ b/services/usir-in/package.json
@@ -9,13 +9,15 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@ai-sdk/openai": "^0.0.66",
-		"@ai-sdk/react": "^1.1.21",
-		"@codesandbox/sandpack-react": "^2.19.9",
+		"@ai-sdk/openai": "catalog:",
+		"@ai-sdk/react": "catalog:",
+		"@codesandbox/sandpack-react": "catalog:",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/utilities": "^3.2.2",
+		"@effect/ai": "catalog:",
+		"@effect/ai-anthropic": "catalog:",
 		"@radix-ui/react-icons": "catalog:",
-		"@radix-ui/react-use-callback-ref": "^1.1.0",
+		"@radix-ui/react-use-callback-ref": "catalog:",
 		"@radix-ui/themes": "catalog:",
 		"@usirin/forge": "workspace:*",
 		"@usirin/layout-tree": "workspace:*",
@@ -23,19 +25,21 @@
 		"@usirin/spellbook": "0.3.0",
 		"@usirin/studio": "workspace:*",
 		"@xstate/react": "catalog:",
-		"@xyflow/react": "^12.3.2",
-		"ai": "^3.4.9",
+		"@xyflow/react": "catalog:",
+		"ai": "catalog:",
 		"clsx": "^2.1.1",
-		"cmdk": "^1.0.0",
+		"cmdk": "catalog:",
+		"effect": "catalog:",
 		"immer": "catalog:",
 		"lodash.omit": "^4.5.0",
 		"next": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
-		"react-error-boundary": "^4.0.13",
-		"react-focus-rings": "^1.1.0",
-		"react-resizable-panels": "^2.1.3",
-		"react-reverse-portal": "^2.1.2",
+		"react-error-boundary": "catalog:",
+		"react-focus-rings": "catalog:",
+		"react-markdown": "catalog:",
+		"react-resizable-panels": "catalog:",
+		"react-reverse-portal": "catalog:",
 		"react-router": "catalog:",
 		"react-server-dom-webpack": "catalog:",
 		"ts-pattern": "catalog:",
@@ -47,8 +51,8 @@
 	"devDependencies": {
 		"@types/bun": "latest",
 		"@types/lodash.omit": "^4.5.9",
-		"@types/react": "18.3.5",
-		"@types/react-dom": "18.3.0",
+		"@types/react": "19.1.8",
+		"@types/react-dom": "19.1.6",
 		"typescript": "catalog:"
 	}
 }
