--- a/biome.jsonc
+++ b/biome.jsonc
@@ -3,14 +3,15 @@
 	"organizeImports": {
 		"enabled": true
 	},
+	"vcs": {
+		"clientKind": "git",
+		"enabled": true,
+		"useIgnoreFile": true,
+		"defaultBranch": "main"
+	},
 	"formatter": {
 		"enabled": true,
 		"lineWidth": 100
-	},
-	"javascript": {
-		"formatter": {
-			"bracketSpacing": false
-		}
 	},
 	"linter": {
 		"enabled": true,
@@ -19,6 +20,17 @@
 			"suspicious": {
 				"noExplicitAny": "off"
 			}
+		}
+	},
+	"javascript": {
+		"formatter": {
+			"bracketSpacing": false
+		}
+	},
+	"json": {
+		"formatter": {
+			"enabled": true,
+			"indentStyle": "tab"
 		}
 	}
 }
