--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,26 +3,43 @@ packages:
   - services/*
 
 catalog:
+  '@ai-sdk/openai': ^1.3.22
+  '@ai-sdk/react': ^1.2.12
+  '@codesandbox/sandpack-react': ^2.20.0
+  '@effect/ai': 0.21.13
+  '@effect/ai-anthropic': 0.11.15
+  '@effect/language-service': 0.23.5
   '@radix-ui/react-icons': 1.3.2
-  '@radix-ui/themes': 3.2.0
-  '@rslib/core': 0.4.1
+  '@radix-ui/react-use-callback-ref': ^1.1.1
+  '@radix-ui/themes': 3.2.1
+  '@rslib/core': 0.10.4
   '@standard-schema/spec': 1.0.0
-  '@xstate/react': 5.0.2
   '@types/react': 19.0.8
   '@types/react-dom': 19.0.3
-  '@types/ws': 8.5.14
+  '@types/ws': 8.18.1
+  '@usirin/spellbook': 0.6.0
+  '@xstate/react': 6.0.0
+  '@xyflow/react': ^12.8.1
+  ai: ^4.3.16
+  cmdk: ^1.1.1
+  effect: 3.16.12
   immer: 10.1.1
   lucide-react: 0.475.0
-  next: 15.1.6
-  react: 19.0.0
-  react-dom: 19.0.0
-  react-router: 7.1.5
-  react-server-dom-webpack: 19.0.0
-  xstate: 5.19.2
-  ts-pattern: 5.6.2
-  typescript: 5.7.3
-  valibot: 1.0.0-rc.0
-  ws: 8.18.1
-  zod: 3.24.2
-  zustand: 5.0.3
+  next: 15.3.5
+  react-dom: 19.1.0
+  react-error-boundary: ^6.0.0
+  react-focus-rings: ^1.2.1
+  react-markdown: ^10.1.0
+  react-resizable-panels: ^3.0.3
+  react-reverse-portal: ^2.3.0
+  react-router: 7.6.3
+  react-server-dom-webpack: 19.1.0
+  react: 19.1.0
+  ts-pattern: 5.7.1
   turbo: 2.5.4
+  typescript: 5.8.3
+  valibot: 1.1.0
+  ws: 8.18.3
+  xstate: 5.20.1
+  zod: 3.25.74
+  zustand: 5.0.6
