--- a/services/usir-in/tsconfig.json
+++ b/services/usir-in/tsconfig.json
@@ -24,7 +24,7 @@
 		"incremental": true,
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
-		"plugins": [{ "name": "next" }],
+		"plugins": [{ "name": "next" }, { "name": "@effect/language-service" }],
 		"paths": {
 			"~/*": ["./*"]
 		},
