--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,8 +1,6 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
+	"$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"vcs": {
 		"clientKind": "git",
 		"enabled": true,
