--- a/package.json
+++ b/package.json
@@ -17,12 +17,24 @@
 		"node": "23.7.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.7.3",
+		"@biomejs/biome": "catalog:",
 		"@effect/language-service": "catalog:",
 		"turbo": "catalog:"
 	},
-	"trustedDependencies": ["@biomejs/biome", "@swc/core", "es5-ext", "esbuild"],
+	"trustedDependencies": [
+		"@biomejs/biome",
+		"@swc/core",
+		"es5-ext",
+		"esbuild"
+	],
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "core-js", "es5-ext", "esbuild", "sharp", "workerd"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"core-js",
+			"es5-ext",
+			"esbuild",
+			"sharp",
+			"workerd"
+		]
 	}
 }
