--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 catalog:
   '@ai-sdk/openai': ^1.3.22
   '@ai-sdk/react': ^1.2.12
+  '@biomejs/biome': 2.1.1
   '@codesandbox/sandpack-react': ^2.20.0
   '@effect/ai': 0.21.13
   '@effect/ai-anthropic': 0.11.15
